// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 66.48046875,
                "lineHeight": 216,
                "position": "absolute",
                "top": -18,
              }
            }
          >
            T
          </Text>
          <View
            style={
              Object {
                "height": 156,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 141,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                his
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 197,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                being
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 294,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 390,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                History
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 514,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 633,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 141,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 69.75,
                "lineHeight": 216,
                "position": "absolute",
                "top": -18,
              }
            }
          >
            Q
          </Text>
          <View
            style={
              Object {
                "height": 156,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 149,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Some
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 250,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                years
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 345,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ago
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 414,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                I
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 433,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                made
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 532,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                the
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 149,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                decision
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 292,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 333,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                take
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 410,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                as
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 457,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 486,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                friend
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 587,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 149,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                woman
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 276,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                who
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 352,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 389,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                very
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 463,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`5. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 52,
                    }
                  }
                >
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
